# WarStonks

./: .gitignore  CHANGELOG.md  NOTICE.md  PRIVACY.md  README.md  WARSTONKS_CASE_STUDY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: release.yml
Resources/: Instructions.md  WFM_Priority_Queue.md  improvedCalculations.md  releaseGuide.md
scripts/: create-windows-updater-manifest.mjs  sync-version.mjs  tauri-wrapper.mjs  test-wfm-presence.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: paddle_ocr_read.py
src-tauri/sql/: item_catalog.sql  manual_aliases.json
src-tauri/src/: data_transfer.rs  error_log.rs  item_catalog.rs  lib.rs  main.rs  maintenance.rs  market_observatory.rs  opportunities.rs  order_flow.rs  recommended_prices.rs  settings.rs  smart_manage.rs  trades.rs  wfm_queue_log.rs  wfm_scheduler.rs  worldstate_cache.rs
src-tauri/src/commands/: mod.rs
src/assets/wallet/: index.ts
src/components/ActiveEventsPanel/: index.tsx
src/components/ActivitiesPanel/: index.tsx
src/components/AlecaframeModal/: index.tsx
src/components/AlertsPanel/: index.tsx
src/components/DiscordWebhookModal/: index.tsx
src/components/ErrorBoundary/: index.tsx
src/components/EventsPanelState/: index.tsx
src/components/FissuresPanel/: index.tsx
src/components/ImportExportModal/: index.tsx
src/components/ItemName/: index.tsx
src/components/LanguageModal/: index.tsx
src/components/MarketNewsPanel/: index.tsx
src/components/ModalPortal/: index.tsx
src/components/NightwavePanel/: index.tsx
src/hooks/: useAnchoredPopover.ts  useAppUpdater.ts  useAutoScanScheduler.ts  useDocumentVisibility.ts  useImageErrorRecovery.ts  useIntegrationSettings.ts  useLocalizedName.ts  useMarketTracking.ts  useModalA11y.ts  useOpportunitiesSync.ts  useOwnedRelicsBootstrap.ts  useSmartManageAlerts.ts  useSmartManageStates.ts  useStartupInitialization.ts  useTradeDetection.ts  useTradeHealthBackground.ts  useTradePresence.ts  useUnderpricedListings.ts  useWatchlistScanner.ts  useWatchlistSubscription.ts  useWorldStateActivities.ts  useWorldStateEvents.ts  useWorldStateExtras.ts  useWorldStateFissures.ts  useWorldStateMarketNews.ts  useWorldStateRefresh.ts  useWorldStateVoidTrader.ts
src/i18n/: active.ts  de.ts  en.ts  es.ts  fr.ts  index.ts  pt.ts  translate.ts  zh-hans.ts
src/lib/: alertAudio.ts  anchoredPosition.test.ts  anchoredPosition.ts  appUpdater.ts  autoScan.ts  dataTransfer.ts  dateTime.ts  eventsErrorHandling.test.ts  eventsErrorHandling.ts  healthLabels.ts  homeErrorHandling.test.ts  homeErrorHandling.ts  itemNames.ts  language.ts  languagePack.ts  marketErrorHandling.test.ts  marketErrorHandling.ts  marketMessages.test.ts  marketMessages.ts  marketVariantFallback.test.ts  marketVariantFallback.ts  notifications.ts  pinnedOpportunities.ts  scannerErrorHandling.test.ts  scannerErrorHandling.ts  setCompletionScreenshotDetectionV2.ts  setCompletionScreenshotImport.ts  settingsErrorHandling.test.ts  settingsErrorHandling.ts  tauriClient.ts  tradeDetectionPriority.test.ts  tradeDetectionPriority.ts  tradeHealthAlerts.ts  trades.ts  tradesErrorHandling.ts  watchlist.ts  watchlistAddFeedback.ts  watchlistMarketSignals.test.ts  watchlistMarketSignals.ts  watchlistPriority.test.ts  (+8 more)
src/mocks/: events.ts  portfolio.ts  trades.ts  watchlist.ts
src/stores/: useAppStore.ts
src/types/: index.ts
(+29 files in other folders)
