[package]
name = "warstonks"
version = "3.0.0"
description = "WarStonks — Warframe market assistant"
authors = []
edition = "2021"

[lib]
name = "warstonks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
anyhow = "1"
hex = "0.4"
base64 = "0.22"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
futures-util = "0.3"
time = { version = "0.3", features = ["formatting"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
tauri-plugin-updater = "2"

[profile.dev]
incremental = false
