[package]
name = "warstonks"
version = "3.0.12"
description = "WarStonks — Warframe market assistant"
authors = ["py."]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "warstonks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
anyhow = "1"
hex = "0.4"
base64 = "0.22"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
futures-util = "0.3"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["time", "sync", "macros"] }
uuid = { version = "1", features = ["v4"] }
# Enable the real OS credential stores. Without these features keyring v3 silently uses
# an in-memory mock that never persists (macOS Keychain / Windows Credential Manager /
# Linux Secret Service). Each backend is cfg-gated to its own OS, so enabling all three
# is safe cross-platform.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
webbrowser = "1"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"

# Opt the process out of Windows 11 Efficiency Mode (EcoQoS) so the WFM scheduler,
# websocket, and scanner threads aren't speed-throttled while the window is backgrounded.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[profile.dev]
incremental = false
